# kop

./: .gitignore  DEVELOP.md  Jenkinsfile  README.md  bash.sh  codecov.yml  docker-compose-cluster.yaml  docker-compose.yml  log4j2.xml  pom.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.jenkins/: build.sh
ci/: init_hydra_oauth_server.sh  init_oauth.sh
conf/: bkenv.sh  bookkeeper.conf  global_zookeeper.conf  kop.conf  kop_env.sh  kop_standalone.conf  log4j2.yaml  zookeeper.conf
dev/: get-project-version.py
docker/: Dockerfile  README.md
docs/: configuration.md  cve_list.md  envoy-proxy.md  implementation.md  kop.md  kop.yaml  reference-metrics.md  release-process.md  schema.md  security.md  upgrade.md
grafana/: README.md  dashboard.json
impl/: README.md  pom.xml
integrations/: README.md  build.sh  publish.sh
integrations/rustlang-rdkafka/: Cargo.toml  Dockerfile
integrations/rustlang-rdkafka/src/: main.rs
kafka-0-10/: pom.xml
kafka-0-9/: pom.xml
kafka-1-0/: pom.xml
kafka-2-4-1/: pom.xml
kafka-2-8/: pom.xml
kafka-3-0/: pom.xml
kafka-client-2-0-shade/: pom.xml
kafka-client-api/: pom.xml
kafka-client-factory/: pom.xml
kafka-examples/: README.md  pom.xml
kafka-impl/: README.md  pom.xml
kafka-payload-processor/: pom.xml
kafka-payload-processor-shaded/: pom.xml
kafka-payload-processor-shaded-tests/: pom.xml
oauth-client/: pom.xml
oauth-client-shaded/: pom.xml
oauth-client-shaded-test/: pom.xml
resources/: checkstyle.xml  findbugsExclude.xml  suppressions.xml
schema-registry/: README.md  pom.xml
scripts/: build.sh  (+2 more)
(+908 files in other folders)
