[package]
name = "rustlang-rdkafka"
version = "0.1.0"
authors = ["Pierre Zemb <contact@pierrezemb.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.22", features = ["cmake-build"] }
rdkafka-sys = { version = "1.2.1", default-features = false }
futures = "0.1.21"
libc = "0.2.0"
log = "0.4.8"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
