[package]
name = "rustlang-rdkafka"
version = "0.1.0"
authors = ["Pierre Zemb <contact@pierrezemb.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.23.1", features = ["cmake-build"] }
futures = "0.3"
tokio = { version = "0.2", features = ["blocking", "macros", "rt-core", "time"] }
libc = "0.2.0"
log = "0.4.8"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
